<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SelectTransactionGroup">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:elevation="0dp"
        android:background="@drawable/bg_header_border_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnCancelTransaction"
                    style="@style/TextButton"
                    android:text="@string/cancel"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"/>

                <TextView
                    style="@style/HeaderTitleText"
                    android:gravity="center"
                    android:text="@string/select_trans_group"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    />

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/buttonGroupWrapper"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@drawable/bg_bordered"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/btnIncoming"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_width="0dp"
                android:clickable="true"
                android:background="@color/colorPrimary"
                android:focusable="true"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvIncoming"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:text="@string/income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnOutgoing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvOutgoing"
                    android:textSize="18sp"

                    android:text="@string/outgoing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:id="@+id/rvTransactionGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>