<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddTransaction">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:elevation="0dp"
        android:background="@drawable/bg_header_border_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnCancelChangePIN"
                    style="@style/TextButton"
                    android:text="@string/cancel"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"/>

                <TextView
                    style="@style/HeaderTitleText"
                    android:gravity="center"
                    android:text="@string/change_PIN"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>

                <TextView
                    android:id="@+id/btnSavePIN"
                    style="@style/TextButtonBold"
                    android:text="@string/save"
                    android:paddingTop="16dp"
                    android:gravity="end"
                    android:paddingBottom="16dp"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_lock_outline_black_24dp"
                android:tint="#666"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
            <EditText
                android:textSize="18sp"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="numberPassword"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="Nhập mã"
                android:id="@+id/etPassword"
                android:textColor="@color/colorBlack"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:layout_marginStart="35dp"
            android:background="@color/colorDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_lock_outline_black_24dp"
                android:tint="#666"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
            <EditText
                android:textSize="18sp"
                android:inputType="numberPassword"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="Nhập lại mã"
                android:id="@+id/etPasswordConfirm"
                android:textColor="@color/colorBlack"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:layout_marginStart="35dp"
            android:background="@color/colorDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>



    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>